@@ -89,4 +89,10 @@ setClass( "C++Function",
 	contains = "function"
 )
 
+setClass( "C++ModuleFunction", 
+    representation( 
+        pointer = "externalptr"
+    )
+    , contains = "function"
+)
 
